--- a/Hedging_Detection.ipynb
+++ b/Hedging_Detection.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d43fc985",
+   "id": "8ec1e413",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4e2291e9",
+   "id": "a21d958d",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "b5f25926",
+   "id": "8d16419b",
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "a5e1162d",
+   "id": "226e4416",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "0392bf78",
+   "id": "9510d750",
    "metadata": {},
    "outputs": [
     {
@@ -1439,7 +1439,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "60d61305",
+   "id": "85114bfd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1453,7 +1453,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "b0f49db7",
+   "id": "8d38e6a3",
    "metadata": {},
    "outputs": [
     {
@@ -1559,7 +1559,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "f51a3b6b",
+   "id": "0bfa3fd2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1573,7 +1573,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "2addcd23",
+   "id": "917d04e6",
    "metadata": {
     "scrolled": false
    },
@@ -1724,20 +1724,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f58ef185",
+   "id": "60071fa9",
    "metadata": {},
    "outputs": [],
    "source": [
     "def isThereHedgeWords(terms):\n",
-    "    for word in cleaned_hedge_words:\n",
-    "        for sentence in df['Speech']:\n",
+    "    for sentence in terms:\n",
+    "        for word in cleaned_hedge_words:\n",
+    "            if word in sentence:\n",
+    "                list = list.append[word]\n",
+    "    \n",
+    "        \n",
     "            "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6ef8c7d",
+   "id": "b77df0f6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1745,7 +1749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37f91d67",
+   "id": "0f534e0e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1753,7 +1757,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa78cf5a",
+   "id": "ba9a192f",
    "metadata": {},
    "outputs": [],
    "source": []
