--- a/Hedging_Detection.ipynb
+++ b/Hedging_Detection.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8ec1e413",
+   "id": "a1e13956",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a21d958d",
+   "id": "ed93b95c",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "8d16419b",
+   "id": "632543e3",
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "226e4416",
+   "id": "cb77190e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "9510d750",
+   "id": "e86f8dca",
    "metadata": {},
    "outputs": [
     {
@@ -1439,7 +1439,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "85114bfd",
+   "id": "a485735b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1453,7 +1453,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "8d38e6a3",
+   "id": "a0d6e5e3",
    "metadata": {},
    "outputs": [
     {
@@ -1559,7 +1559,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "0bfa3fd2",
+   "id": "b97ea95c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1573,7 +1573,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "917d04e6",
+   "id": "b2a83cfd",
    "metadata": {
     "scrolled": false
    },
@@ -1717,47 +1717,303 @@
     }
    ],
    "source": [
-    "cleaned_booster_words = removelista(booster_Words)\n",
-    "cleaned_booster_words"
+    "cleaned_booster_words = removelista(booster_Words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "dd74c941",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#sentences = []\n",
+    "def isThereHedgeWords(terms):   \n",
+    "    for sentence in terms:\n",
+    "        for x in cleaned_hedge_words:\n",
+    "            if word in sentences and word == x :\n",
+    "                return True\n",
+    "        \n",
+    "            \n",
+    "              \n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "8b18c6ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'newly'"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentenca = []\n",
+    "x = \"newly\"\n",
+    "for sentence in df['Speech']:\n",
+    "    if x in sentence:\n",
+    "        sentenca.append(x)\n",
+    "sentenca\n",
+    "x"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60071fa9",
+   "id": "21ad1c40",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def isThereHedgeWords(terms):\n",
+    "def hedgeWordsInSpeech(terms):\n",
     "    for sentence in terms:\n",
     "        for word in cleaned_hedge_words:\n",
     "            if word in sentence:\n",
     "                list = list.append[word]\n",
-    "    \n",
+    "    return list\n",
     "        \n",
     "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b77df0f6",
+   "execution_count": 46,
+   "id": "31dd91ae",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "job =[]\n",
+    "for word in cleaned_hedge_words:\n",
+    "    job.append(word)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "3ab55abd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['#Epistemic Verbs',\n",
+       " 'suggest',\n",
+       " 'believe',\n",
+       " 'appear',\n",
+       " 'indicate',\n",
+       " 'assume',\n",
+       " 'seem',\n",
+       " 'consider',\n",
+       " 'doubt',\n",
+       " 'estimate',\n",
+       " 'expect',\n",
+       " 'feel',\n",
+       " 'guess',\n",
+       " 'imagine',\n",
+       " 'speculate',\n",
+       " 'suppose',\n",
+       " 'think',\n",
+       " 'understand',\n",
+       " 'imply',\n",
+       " 'presume',\n",
+       " 'suspect',\n",
+       " 'postulate',\n",
+       " 'reckon',\n",
+       " 'infer',\n",
+       " 'hope',\n",
+       " '',\n",
+       " '#Epistemic Adverbs',\n",
+       " 'rather',\n",
+       " 'slightly',\n",
+       " 'barely',\n",
+       " 'strictly',\n",
+       " 'presumably',\n",
+       " 'fairly',\n",
+       " 'theoretically',\n",
+       " 'basically',\n",
+       " 'relatively',\n",
+       " 'possibly',\n",
+       " 'preferably',\n",
+       " 'slenderly',\n",
+       " 'scantily',\n",
+       " 'decidedly',\n",
+       " 'arguably',\n",
+       " 'seemingly',\n",
+       " 'occasionally',\n",
+       " 'partially',\n",
+       " 'partly',\n",
+       " 'practically',\n",
+       " 'roughly',\n",
+       " 'virtually',\n",
+       " 'allegedly',\n",
+       " '',\n",
+       " '#Epistemic Adjectives',\n",
+       " 'presumable',\n",
+       " 'possible',\n",
+       " 'probably',\n",
+       " 'likely',\n",
+       " 'apparent',\n",
+       " 'probable',\n",
+       " 'improbable',\n",
+       " 'unlikely',\n",
+       " 'rarely',\n",
+       " 'improbably',\n",
+       " 'unclearly',\n",
+       " 'unsure',\n",
+       " 'sure',\n",
+       " 'chance',\n",
+       " 'unclear',\n",
+       " '',\n",
+       " '#Epistemic Modal Verbs',\n",
+       " 'may',\n",
+       " 'might',\n",
+       " 'maybe',\n",
+       " 'shall',\n",
+       " 'should',\n",
+       " 'can',\n",
+       " 'could',\n",
+       " 'would',\n",
+       " 'ought',\n",
+       " '',\n",
+       " '#Approximations',\n",
+       " 'usually',\n",
+       " 'approximately',\n",
+       " 'generally',\n",
+       " 'frequently',\n",
+       " 'normally']"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "job"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "7e871d04",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "isThereHedgeWords(df['Speech'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "7f81aa23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "isThereHedgeWords('joe')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "4778d9f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result = any(ele in cleaned_hedge_words for ele in df['Speech'])\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "05eca657",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results = any(ele in df['Speech'] for ele in cleaned_hedge_words)\n",
+    "results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "e123169b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c = any(ele in cleaned_booster_words for ele in df['Speech'])\n",
+    "c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "654ccd04",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g = \"newly suggest\"\n",
+    "f = any(ele in cleaned_hedge_words for ele in g)\n",
+    "f"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f534e0e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ba9a192f",
+   "id": "7947a782",
    "metadata": {},
    "outputs": [],
    "source": []
